--- a/tidytuesday.fordjohnson.dev/_quarto.yml
+++ b/tidytuesday.fordjohnson.dev/_quarto.yml
@@ -36,9 +36,9 @@ website:
 format:
   html:
     include-in-header:
-      - text: <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-WW8S5XBD');</script>
+      - text: <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-KG7K89VV');</script>
     include-before-body:
-      - text: <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WW8S5XBD" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      - text: <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KG7K89VV"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     anchor-sections: false
     theme: styles.scss
     toc: false
