--- a/tidytuesday.fordjohnson.dev/_quarto.yml
+++ b/tidytuesday.fordjohnson.dev/_quarto.yml
@@ -3,11 +3,10 @@ project:
   output-dir: docs
 
 website:
-  title: "Ford Johnson"
+  title: "TidyTuesday | Ford Johnson"
   site-url: https://tidytuesday.fordjohnson.dev
   open-graph: true
   search: false
-  cookie-consent: true
   favicon: images/favicon.png
   navbar:
     right:
@@ -15,10 +14,6 @@ website:
         href: https://fordjohnson.dev/
       - text: About
         href: about/index.qmd
-      - icon: github
-        href: https://github.com/bradfordjohnson
-      - icon: linkedin
-        href: https://linkedin.com/in/bradford-ford-johnson
   page-footer:
     center:
       - icon: github
@@ -36,9 +31,9 @@ website:
 format:
   html:
     include-in-header:
-      - text: <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-KG7K89VV');</script>
+      - text: <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-W39B6FZ6');</script>
     include-before-body:
-      - text: <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KG7K89VV"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      - text: <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W39B6FZ6"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     anchor-sections: false
     theme: styles.scss
     toc: false
