--- a/tidytuesday.fordjohnson.dev/visuals.yml
+++ b/tidytuesday.fordjohnson.dev/visuals.yml
@@ -12,6 +12,8 @@
     alt: "Simpsons Character Data"
   - week: "2025-02-18"
     alt: "Agencies from the FBI Crime Data API"
+  - week: "2025-04-01"
+    alt: "Treemap showing the color frequency of Pokemon by their primary type"
 
 - year: 2024
   visuals:
