--- a/tidytuesday.fordjohnson.dev/visuals.yml
+++ b/tidytuesday.fordjohnson.dev/visuals.yml
@@ -14,6 +14,8 @@
     alt: "Agencies from the FBI Crime Data API"
   - week: "2025-04-01"
     alt: "Treemap showing the color frequency of Pokemon by their primary type"
+  - week: "2025-04-08"
+    alt: "U.S. map colored by state, showing median emergency department wait times in minutes."
 
 - year: 2024
   visuals:
