update prod branch name from master to main

--- a/.github/workflows/ci-cd-quarto.yml
+++ b/.github/workflows/ci-cd-quarto.yml
@@ -3,7 +3,7 @@ name: Quarto CI/CD Deployment
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - "tidytuesday.fordjohnson.dev/**"
   workflow_dispatch:
